--- a/server/frontend/static/style.css
+++ b/server/frontend/static/style.css
@@ -124,3 +124,10 @@ img{
     text-align:center;
     box-shadow: 2px 2px 3px #999;  
 }
+
+.lower-card {
+    display: flex;
+    flex-direction: row;
+}
+
+.lower-card-left img { }
