--- a/server/frontend/static/style.css
+++ b/server/frontend/static/style.css
@@ -1,148 +1,170 @@
-img{
-  width: 60%;
-  align-self: center;
+img {
+    width: 60%;
+    align-self: center;
 }
 
-.card{
-  border: rgb(103, 102, 105) 3px solid;
-  display: flex;  
-  flex-direction: column;
-  margin-left:5%;
-  margin-right:5%;
-  margin-top: 1%;
-  margin-bottom: 1%;
+.card {
+    border: rgb(103, 102, 105) 3px solid;
+    display: flex;
+    flex-direction: column;
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-top: 1%;
+    margin-bottom: 1%;
 }
 
-.row{
-  display: flex;  
-  flex: 1;
-  flex-direction: row;
-  margin: auto;
-  margin-top: 1%;
-  justify-content: center;
-  padding:20px;
+.row {
+    display: flex;
+    flex: 1;
+    flex-direction: row;
+    margin: auto;
+    margin-top: 1%;
+    justify-content: center;
+    padding: 20px;
 }
 
-.container{
-  justify-content: center;
-}
-.details{
-  font-size: 20px;
-  color: rgb(97, 64, 128);
-  padding:20px;
+.container {
+    justify-content: center;
 }
 
-.title{
-  font-size: 20px;
-  background-color: rgb(97, 64, 128);
-  color: white;
-  text-align: center;
-  margin:20px;
-  padding:5px;
+.details {
+    font-size: 20px;
+    color: rgb(97, 64, 128);
+    padding: 20px;
 }
 
-.homepage_links{
-  color:  rgb(97, 64, 128);
-  padding: 25%;
-  font-size: larger;
-  }
-
-.loginlink{
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-end;
+.title {
+    font-size: 20px;
+    background-color: rgb(97, 64, 128);
+    color: white;
+    text-align: center;
+    margin: 20px;
+    padding: 5px;
 }
 
-.banner{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  flex:1
+.homepage_links {
+    color: rgb(97, 64, 128);
+    padding: 25%;
+    font-size: larger;
+}
+
+.loginlink {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+}
+
+.banner {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    flex: 1
 }
 
 .form_panel {
-  padding:2%;
-  display: flex;
-  flex-direction: column;
-  border-radius: 50px;
-  text-align:center;
-  box-shadow: 2px 2px 2px 3px #999;
-  margin: auto;
-  min-width: 350px;
-  width: 80%;
-  margin-top:3%;
-  background-color: black;
+    padding: 2%;
+    display: flex;
+    flex-direction: column;
+    border-radius: 50px;
+    text-align: center;
+    box-shadow: 2px 2px 2px 3px #999;
+    margin: auto;
+    min-width: 350px;
+    width: 80%;
+    margin-top: 3%;
+    background-color: black;
 }
 
-.navitems{
-  display: flex;
-  flex-direction: row;
-  padding: 20px;
-  flex: 1;
-  justify-content: flex-start;
-  justify-self: center;
+.navitems {
+    display: flex;
+    flex-direction: row;
+    padding: 20px;
+    flex: 1;
+    justify-content: flex-start;
+    justify-self: center;
 }
 
-.nav_item{
-  margin-left:15px;
-  font-size: 20px;
-  color: black;
-  align-self: center;
+.nav_item {
+    margin-left: 15px;
+    font-size: 20px;
+    color: black;
+    align-self: center;
 }
 
-.username{
-  font: 30px sans-serif;
-  color:black;
-  justify-content: 'flex-end';
-  align-self:flex-end;
-  vertical-align: middle;
+.username {
+    font: 30px sans-serif;
+    color: black;
+    justify-content: 'flex-end';
+    align-self: flex-end;
+    vertical-align: middle;
 }
 
 .input_panel {
-  display: flex;
-  flex-direction: row;
-  padding: 20px;
-  flex: 1;
-  justify-content:flex-end;
-  align-items: flex-end;
-  vertical-align: middle;
+    display: flex;
+    flex-direction: row;
+    padding: 20px;
+    flex: 1;
+    justify-content: flex-end;
+    align-items: flex-end;
+    vertical-align: middle;
 }
 
-.small_header{
-  font: 30px sans-serif;
-  color:black;
-  margin: .5cm;
+.small_header {
+    font: 30px sans-serif;
+    color: black;
+    margin: .5cm;
 }
 
 .img_icon {
-  align-self: center;
-    width:40px;
-    background-color:#0C9;
-    color:#FFF;
-    border-radius:50px;
-    text-align:center;
-    box-shadow: 2px 2px 3px #999;  
+    align-self: center;
+    width: 40px;
+    background-color: #0C9;
+    color: #FFF;
+    border-radius: 50px;
+    text-align: center;
+    box-shadow: 2px 2px 3px #999;
 }
 
 .contact-card {
     display: flex;
     flex-direction: column;
+    border: 1px solid black;
+    border-radius: 20px;
+    padding: 2.5rem;
+    margin-top: 4rem !important;
 }
 
 .lower-card {
     display: flex;
     flex-direction: row;
+    justify-content: center;
+    width: 100%;
+}
+
+.lower-card-left {
+    
 }
 
 .lower-card-left img {
-    width: 250px;
-    height: 250px;
-    margin: 0 auto;
+    width: 300px;
+    height: 300px;
+    margin: 0 auto !important;
 }
 
 .lower-card-right {
     display: flex;
     flex-direction: column;
     margin-bottom: 15px;
+}
+
+.contact-item {
+    margin: 0;
+    margin-bottom: 1rem;
+}
+
+.contact-item>p {
+    margin: 0;
+    text-align: center;
+    text-decoration: none;
 }
